--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@ body {
     color: black;
 }
 
+code {
+    color: crimson;
+}
+
 a:link {
     color: white;
 }
